100GB micro-benchmarks done.